Map is bigger and SAOM logo is BW

--- a/index.html
+++ b/index.html
@@ -178,15 +178,7 @@ http://scal.io -- check us out.
 
                                 <img src="img/saom_logo.png" class="theinn" alt="SAOM - Serviços de Assitência Organizações de Maria" />
                             </p>
-                            <p>
-                             <iframe 
-                                width="100%" 
-                                height="450" 
-                                frameborder="0" 
-                                style="border:0" 
-                                src="https://www.google.com/maps/embed/v1/place?q=SAOM%2C%20Porto%2C%20Portugal&key=AIzaSyAxZEekOj3DmYnjMHwejTAhZZZsYvq16NQ" allowfullscreen>
-                            </iframe>
-                            </p>
+
                             
 
 
@@ -206,6 +198,25 @@ http://scal.io -- check us out.
                         </div> 
 
                         <div class="column full">
+
+                                                    <p>
+                            <!--<iframe 
+                                width="100%" 
+                                height="450" 
+                                frameborder="0" 
+                                style="border:0" 
+                                src="https://www.google.com/maps/d/embed?mid=zr2geAim-8z8.kJXM6tsNaw6s&key=AIzaSyAxZEekOj3DmYnjMHwejTAhZZZsYvq16NQ" allowfullscreen>
+                            -->
+
+                            <iframe 
+                                width="100%" 
+                                height="450" 
+                                frameborder="0" 
+                                style="border:0" 
+                                src="https://www.google.com/maps/embed/v1/place?q=SAOM%2C%20Porto%2C%20Portugal&key=AIzaSyAxZEekOj3DmYnjMHwejTAhZZZsYvq16NQ" allowfullscreen>
+                            </iframe>
+                            </p>
+                            
 
                         </div>
 
